# kube-shelf

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: background.py  config.py  db.py  inventory.py  k8s_client.py  main.py  models.py  registry.py  schemas.py  trivy.py
app/static/: styles.css
app/templates/: base.html  index.html
deploy/kubernetes/base/: deployment.yaml  ingress-example.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service-account.yaml  service.yaml
examples/: sample-output.md
tests/: test_image_parser.py  test_registry.py
